--- a/bibFile.bib
+++ b/bibFile.bib
@@ -24,6 +24,13 @@
   organization={IEEE}
 }
 
+@article{parallel-prog-for-fpga,
+  title={Parallel programming for FPGAs},
+  author={Kastner, Ryan and Matai, Janarbek and Neuendorffer, Stephen},
+  journal={arXiv preprint arXiv:1805.03648},
+  year={2018}
+}
+
 
 @incollection{ANN-Paper,
   title={Artificial neural network},
@@ -174,6 +181,26 @@
   organization={IEEE}
 }
 
+@article{q-learning-paper,
+  title={Q-learning},
+  author={Watkins, Christopher JCH and Dayan, Peter},
+  journal={Machine learning},
+  volume={8},
+  number={3-4},
+  pages={279--292},
+  year={1992},
+  publisher={Springer}
+}
+
+@inproceedings{q-learning-theory,
+  title={A theoretical analysis of deep Q-learning},
+  author={Fan, Jianqing and Wang, Zhaoran and Xie, Yuchen and Yang, Zhuoran},
+  booktitle={Learning for Dynamics and Control},
+  pages={486--489},
+  year={2020},
+  organization={PMLR}
+}
+
 @inproceedings{flexible-NN,
   title={Hw-Sw codesign of a flexible neural controller through a FPGA-based neural network programmed in VHDL},
   author={Pasero, E and Perri, M},
@@ -182,6 +209,23 @@
   pages={3161--3165},
   year={2004},
   organization={IEEE}
+}
+
+
+
+@article{for-8bits-proof,
+  title={Improving the speed of neural networks on CPUs},
+  author={Vanhoucke, Vincent and Senior, Andrew and Mao, Mark Z},
+  year={2011}
+}
+
+@article{reservoir-computing-hw,
+  title={Hardware-Optimized Reservoir Computing System for Edge Intelligence Applications},
+  author={Mor{\'a}n, Alejandro and Canals, Vincent and Galan-Prado, Fabio and Frasser, Christian F and Radhakrishnan, Dhinakar and Safavi, Saeid and Rossell{\'o}, Josep L},
+  journal={Cognitive Computation},
+  pages={1--9},
+  year={2021},
+  publisher={Springer}
 }
 
 @article{stone-theorm-for-NN,
